bugfix: don't set double border on top of thead and its first tr ancestor element

--- a/css/style.less
+++ b/css/style.less
@@ -1395,7 +1395,7 @@ table.lmsbox {
 	&-innerbox > tfoot {
 		background-color: @dark;
 	}
-	& > thead > tr,
+	& > thead > tr:not(:first-child),
 	& > tfoot > tr {
 		border-top: 1px solid black;
 	}
